--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.10"
+    ext.kotlin_version = "1.4.20"
     repositories {
         google()
         jcenter()
@@ -34,17 +34,13 @@ ext{
     targetSdkVersion = 1
     versionCode = 1
     versionName = "1.0"
-
     frescoVersion = "1.5.0"
     frescoProcesserVersion = "2.1.0"
-
     kotlinCoroutineVersion = "1.4.1"
-
     retrofitVersion = "2.9.0"
-
     androidxMediaVersion = "1.2.1"
-
     roomDataBaseVersion = "1.1.1"
-
-    lifecycleVersion = "1.1.1"
+    lifecycleVersion = "2.3.0-beta01"
+    viewModelVersion = "2.3.0-beta01"
+    pagingRuntimeVersion = "3.0.0-alpha09"
 }
