--- a/core_base/build.gradle
+++ b/core_base/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -59,5 +59,11 @@ dependencies {
     api "android.arch.persistence.room:runtime:$rootProject.roomDataBaseVersion"
     annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomDataBaseVersion"
 
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-beta01"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.viewModelVersion"
+
+    api "android.arch.lifecycle:extensions:1.1.1"
+    api "android.arch.lifecycle:common-java8:1.1.1"
+    api "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.lifecycleVersion"
+
+    api "androidx.paging:paging-runtime-ktx:$rootProject.pagingRuntimeVersion"
 }
