--- a/core_base/build.gradle
+++ b/core_base/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -66,4 +69,7 @@ dependencies {
     api "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.lifecycleVersion"
 
     api "androidx.paging:paging-runtime-ktx:$rootProject.pagingRuntimeVersion"
+
+    api 'com.cjj.materialrefeshlayout:library:1.3.0'
+
 }
