--- a/core_network/build.gradle
+++ b/core_network/build.gradle
@@ -51,4 +51,6 @@ dependencies {
 
     api "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
     api "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
+    api "com.squareup.retrofit2:converter-moshi:2.1.0"
+    api "com.squareup.moshi:moshi-kotlin:$rootProject.moshiVersion"
 }
